--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_redux: ^0.6.0
   http: ^0.12.2
+  http_interceptor: ^0.3.2
 
 dev_dependencies:
   flutter_test:
