--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_redux: ^0.6.0
   http: ^0.12.2
   http_interceptor: ^0.3.2
+  collection: ^1.14.13
 
 dev_dependencies:
   flutter_test:
