--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   http: ^0.12.2
   http_interceptor: ^0.3.2
   collection: ^1.14.13
+  shared_preferences: ^0.5.10
+  get_it: ^4.0.4
+  reselect: ^0.4.0
 
 dev_dependencies:
   flutter_test:
