--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^0.5.10
   get_it: ^4.0.4
   reselect: ^0.4.0
+  flutter_svg: ^0.18.1
 
 dev_dependencies:
   flutter_test:
