--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   get_it: ^4.0.4
   reselect: ^0.4.0
   flutter_svg: ^0.18.1
+  rxdart: ^0.24.1
+  redux_epics: ^0.14.0
 
 dev_dependencies:
   flutter_test:
