--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   http: ^0.12.2
   http_interceptor: ^0.3.2
   collection: ^1.14.13
-  shared_preferences: ^0.5.10
+  shared_preferences: '>=0.5.12+4 <2.0.0'
   get_it: ^4.0.4
   reselect: ^0.4.0
   flutter_svg: ^0.18.1
