--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_svg: ^0.18.1
   rxdart: ^0.24.1
   redux_epics: ^0.14.0
-  transparent_image: ^1.0.0
+  cached_network_image: ^2.4.1
 
 dev_dependencies:
   flutter_test:
