--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,27 +26,27 @@ dependencies:
   # Internationalization support.
   flutter_localizations:
     sdk: flutter
-
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  flutter_redux: ^0.6.0
-  http: ^0.12.2
-  http_interceptor: ^0.3.2
-  collection: ^1.15.0-nullsafety.4
-  shared_preferences: '>=0.5.12+4 <2.0.0'
-  get_it: ^4.0.4
-  reselect: ^0.4.0
-  flutter_svg: ^0.18.1
-  rxdart: ^0.24.1
-  redux_epics: ^0.14.0
-  cached_network_image: ^2.4.1
+  cupertino_icons: ^1.0.3
+  flutter_redux: ^0.8.2
+  http: ^0.13.3
+  http_interceptor: ^0.4.1
+  collection: ^1.15.0
+  shared_preferences: ^2.0.5
+  get_it: ^7.1.3
+  reselect: ^0.5.0
+  flutter_svg: ^0.22.0
+  rxdart: ^0.26.0
+  redux_epics: ^0.15.0
+  cached_network_image: ^3.0.0
   # Redux actions logger
-  redux_logging: ^0.4.0
+  redux_logging: ^0.5.0
 
 dev_dependencies:
-  lint: ^1.5.1
+  lint: ^1.5.3
   flutter_test:
     sdk: flutter
 
