feat: add pzz_repository_mock.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ flutter:
 
   assets:
     - assets/pizzas.json
+    - assets/sauces.json
+    - assets/streets.json
+    - assets/houses.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
