--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,19 +31,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
-  flutter_redux: ^0.8.2
+  flutter_redux: ^0.10.0
   http: ^0.13.3
-  http_interceptor: ^0.4.1
+  http_interceptor: ^1.0.2
   collection: ^1.15.0
   shared_preferences: ^2.0.5
   get_it: ^7.1.3
   reselect: ^0.5.0
-  flutter_svg: ^0.22.0
-  rxdart: ^0.26.0
+  flutter_svg: ^1.1.5
+  rxdart: ^0.27.5
   redux_epics: ^0.15.0
   cached_network_image: ^3.0.0
   # Redux actions logger
   redux_logging: ^0.5.0
+  redux: ^5.0.0
 
 dev_dependencies:
   lint: ^1.5.3
