--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,14 @@ dependencies:
   # Redux actions logger
   redux_logging: ^0.5.0
   redux: ^5.0.0
+  mobx: ^2.0.7+7
+  flutter_mobx: ^2.0.6+3
+  provider: ^6.0.3
 
 dev_dependencies:
   lint: ^1.5.3
+  build_runner: ^2.2.1
+  mobx_codegen: ^2.0.7+2
   flutter_test:
     sdk: flutter
 
